--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
     "csstype": "^3.1.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-markdown": "^10.0.1",
     "sass": "^1.85.1",
     "typescript": "^5.8.2",
     "vite": "^6.2.0",
+    "vite-plugin-markdown": "^2.2.0",
     "yaml": "^2.7.0"
   },
   "scripts": {
