--- a/package.json
+++ b/package.json
@@ -2,27 +2,35 @@
   "name": "backi",
   "version": "0.0.1",
   "description": "Declaratively create dynamic backgrounds for your site",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "types": "dist/Backi.d.ts",
   "license": "MIT",
   "devDependencies": {
+    "@modyfi/vite-plugin-yaml": "^1.1.1",
+    "@types/node": "^22.13.9",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
     "color": "^5.0.0",
     "csstype": "^3.1.3",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
     "sass": "^1.85.1",
     "typescript": "^5.8.2",
     "vite": "^6.2.0",
-    "vite-plugin-markdown": "^2.2.0",
+    "vite-plugin-dts": "^4.5.3",
     "yaml": "^2.7.0"
   },
+  "files": [
+    "dist"
+  ],
+  "sideEffects": [
+    "**/*.css"
+  ],
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build"
+    "build": "tsc --p ./tsconfig.lib.json && vite build"
   },
   "dependencies": {
-    "@modyfi/vite-plugin-yaml": "^1.1.1"
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
   }
 }
