--- a/.github/workflows/build-to-github-pages.yaml
+++ b/.github/workflows/build-to-github-pages.yaml
@@ -28,7 +28,7 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-yarn-
       - run: yarn install --frozen-lockfile
-      - run: yarn build --base=/backi
+      - run: yarn build --base=/backi --mode demo
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
